# rust-gslb-library

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cargo.toml  pyproject.toml
.github/workflows/: CI.yml  ci-browser.yml  ci-node.yml  ci-python.yml  gslb-python-ci.yml  release.yml
core/: Cargo.toml
core/src/: lib.rs
js-browser/: Cargo.toml  package-lock.json  package.json  test_gslb.test.js
js-browser/src/: lib.rs
js-node/: Cargo.toml  package-lock.json  package.json  test_gslb.test.js
js-node/src/: lib.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test_gslb.py
src/: lib.rs
tests/: test_gslb.py
