[package]
name = "gslb-browser"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gslb-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
gloo-timers = { version = "0.2", features = ["futures"] }