[package]
name = "gslb-node"
version = "1.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gslb-core = { path = "../core" }
napi = { version = "2.14", default-features = false, features = ["napi4"] }
napi-derive = "2.14"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }