[package]
name = "gslb_python"
version = "1.2.2"
edition = "2021"

[lib]
name = "gslb_rust"
crate-type = ["cdylib"]

[dependencies]
gslb-core = { path = "../core" }
pyo3 = { version = "0.19", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }