[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gslb_rust"
version = "1.2.0"
description = "A high-efficiency Rust-based GSLB resolver for Python"
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]